<resources>
    <string name="app_name">teste</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_google">Sign in with Google</string>
    <string name="sign_face">Sign in with Facebook</string>
    <string name="or">or</string>
    <string name="sign_email">Sign in with E-mail</string>
    <string name="text_conect">Facebook</string>
    <string name="fone_email">Email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="email">Email</string>
    <string name="telefone_ddd">Telefone + DDD</string>
    <string name="cpf">CPF</string>
    <string name="senha">Senha</string>
    <string name="registrar">REGISTRAR</string>
    <string name="input_email">Email:</string>
    <string name="input_cpf">Cpf:</string>
    <string name="input_phone">Telefone:</string>
    <string name="input_name">Nome:</string>
</resources>