<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <ImageView
                android:id="@+id/perfil"
                android:layout_width="150dp"
                android:layout_height="150dp"
                tools:src="@tools:sample/avatars"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/name"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_name"
                app:layout_constraintBottom_toTopOf="@id/phone"
                app:layout_constraintStart_toEndOf="@id/perfil"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread"/>

            <TextView
                android:id="@+id/input_name"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                app:layout_constraintBottom_toTopOf="@id/phone"
                app:layout_constraintStart_toEndOf="@id/name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread"/>

            <TextView
                android:id="@+id/phone"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_phone"
                app:layout_constraintBottom_toTopOf="@+id/CPF"
                app:layout_constraintStart_toEndOf="@id/perfil"
                app:layout_constraintTop_toBottomOf="@+id/name"
                app:layout_constraintVertical_chainStyle="spread"/>

            <TextView
                android:id="@+id/input_phone"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                app:layout_constraintBottom_toTopOf="@+id/CPF"
                app:layout_constraintStart_toEndOf="@id/phone"
                app:layout_constraintTop_toBottomOf="@+id/name"
                app:layout_constraintVertical_chainStyle="spread"/>


            <TextView
                android:id="@+id/CPF"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_cpf"
                app:layout_constraintBottom_toTopOf="@id/Email"
                app:layout_constraintStart_toEndOf="@id/perfil"
                app:layout_constraintTop_toBottomOf="@+id/phone"
                app:layout_constraintVertical_chainStyle="spread"/>

            <TextView
                android:id="@+id/input_CPF"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                app:layout_constraintBottom_toTopOf="@id/Email"
                app:layout_constraintStart_toEndOf="@id/CPF"
                app:layout_constraintTop_toBottomOf="@+id/phone"
                app:layout_constraintVertical_chainStyle="spread"/>

            <TextView
                android:id="@+id/Email"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_email"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/perfil"
                app:layout_constraintTop_toBottomOf="@+id/CPF"
                app:layout_constraintVertical_chainStyle="spread"/>

            <TextView
                android:id="@+id/input_email"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/Email"
                app:layout_constraintTop_toBottomOf="@+id/CPF"
                app:layout_constraintVertical_chainStyle="spread"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>